--- a/VRChat/73/1139773.html
+++ b/VRChat/73/1139773.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Uao9fbh62sXXo1zXsvo58v4T6c+OzC9ViJAJd1ir3HI="></script>
+    "eBGz3Q1DKU1KhwYHhU2lvlcS5YRKISEn+QvwgsYMoLQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"エンジニア・クレア/ VRChat対応3Dモデル","description":"オリジナルスチームパンク系キャラクターモデル第二弾です。\n営利非営利を問わずVRChatの他各種コンテンツ制作にご利用いただけます。","url":"https://booth.pm/ja/items/1139773","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1139773/39f42c9d-29d4-45fc-b122-b2b116a09bae_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Uao9fbh62sXXo1zXsvo58v4T6c+OzC9ViJAJd1ir3HI="></script>
+    nonce="eBGz3Q1DKU1KhwYHhU2lvlcS5YRKISEn+QvwgsYMoLQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -616,9 +616,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
