--- a/VRChat/55/1142155.html
+++ b/VRChat/55/1142155.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yUKTqQEkZJd9eYky46T2dm8IAwvIqpNN1PqglPnSW3M="></script>
+    "kHoHGmoX/WDaYxDeL74veZSQueCfkgu96SWE4JnZCNE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"亜-02式自動拳銃【VRChat向け】","description":"【注意】\n・商品画像は動く城のフィオのお店 様の「裏面を描画するStandardシェーダー」を使用しています。\n本製品に含まれているシェーダーはスタンダードシェーダーです。\n・商品画像に映っている専用ホルスターは本製品に含まれていません。今後別の形で販売予定です。\n・Textureを修正したため商品画像と多少異なる点がありますが、ご了承ください。\n\n---------------------------------------------------------\n\n「段落落ちされ肉厚くしたスライド、大形化されたドット入りサイトシステム、ガバメントに近い「引く」ことによって射撃の即応性やガク引きを抑えられるトリガー、全体的に滑り止めを施したグリップ、７０年代の撃ち方でも対応される、握り方を問わない引っ掛け付きトリガーガード\nいいと思います！」-アザトナナさん 　@aoinanaya ","url":"https://booth.pm/ja/items/1142155","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1142155/87d800e8-8924-4908-98f3-67f8f3e1fbf5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yUKTqQEkZJd9eYky46T2dm8IAwvIqpNN1PqglPnSW3M="></script>
+    nonce="kHoHGmoX/WDaYxDeL74veZSQueCfkgu96SWE4JnZCNE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -590,9 +590,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
