--- a/VRChat/79/1141679.html
+++ b/VRChat/79/1141679.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZsbYcuo24T/DJQxo7o6b4CRoJxsXxyDpo32tQl0zn5Y="></script>
+    "tE58s6Io6IQfq6+o19m/33mCbtXOYhnCwGuflUc2BGw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat用プレゼンシステム】VRSlide 2.0","description":"▲▲▲ WARNING ▲▲▲\nVRSlideは現時点でVRCSDK2でのみ動作します。\nVRSlide currently only works on VRCSDK2. \n\n● 2021/4/6にバージョン2.0aを公開しました。VRC_Panoramaの変更に対応しました。VRChat内での画面送りの挙動を改善し、画面デザインを一部変更しました。 / Added support for changes in VRC_Panorama, improved the behavior of screen feed in VRChat, and changed some screen designs.\n\n● 2020/4/29 VRSlide 1.2.1が正常に公開出来ていなかった問題を修正 / Fixed a problem that VRSlide 1.2.1 was not published.\n\n● 2019/12/13にバージョン1.2.1を公開しました。英語版のWebと英語版オンラインマニュアルを追加しました。/ English Support added Web/Manual.\n\n● 2019/10/7 20:21にバージョン1.2を公開しました。このバージョンではUnityPackageが更新されています。スライド送りの仕組みを変更しました。\n\n● 2019/7/13 15:00にバージョン1.1Betaを公開しました。このバージョンではWebの更新のみとなります。ヘッダのリンク設定の修正および細かな調整が行われています。\n\n● 2018/12/26 11:44にバージョン1.0.1dに更新しました。VRSlideを利用する上で致命的な不具合を修正する更新となっておりますので必ず更新を行って頂きますようお願い申し上げます。データーの移行についてはマニュアル16ページ目をご確認ください。 ●\n\nVRSlideへようこそ。VRSlideを利用するとVRChat内にSpeakerDeckやSlideShareのスライドを表示させてプレゼンテーションや会議を行う事が出来ます。\n(おそらく)世界初！ SlideShareとSpeakerDeckを読み込む事が出来ます。また動的にプレゼンデータの差し替えが可能な為、バーチャルLTやVRChatでのライブイベントのスライド等にも使えます！！！\n(Unity 2018.4.20f1で動作確認済み)","url":"https://booth.pm/ja/items/1141679","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"700"},"image":"https://booth.pximg.net/c/620x620/880cf89f-fa01-4384-a8aa-8742d5a8f71d/i/1141679/56c490df-78a3-4ee4-86cf-d0f3ac0d4c54_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZsbYcuo24T/DJQxo7o6b4CRoJxsXxyDpo32tQl0zn5Y="></script>
+    nonce="tE58s6Io6IQfq6+o19m/33mCbtXOYhnCwGuflUc2BGw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -638,9 +638,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
