--- a/VRChat/76/1139776.html
+++ b/VRChat/76/1139776.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yBL0Ezc9Ify5G2+7Qic1rFT4Woz9yFoo3RfYIV+1h+c="></script>
+    "fhFAkB7NEu+eqycM5Fy0kbIWgPe164XwnKAMHaK81Wg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Sports Assult Rifle \"GA-01A1\"（民間向けスポーツライフル）","description":"Virtual Collection Stage0にアザトナナ（ななや）さんの為に製作した民間向けスポーツライフルです。\n\nシェイプキーによって各ギミックが可動します\n\nSketchfabで3Dモデルを閲覧することができます\nStandardシェーダー向きのPBRテクスチャと、トゥーン系シェーダー向きのColorテクスチャを用意しています\n\nポリゴン数　△：9167\n※普段見えない弾丸を除くと△：7695\n\n注意：ポリゴン数が非常に多いです　VRCのポリゴン制限が7万に緩和されていますが、ポリゴン数は多い部類に入るのでご注意下さい\n\n※モデル：アザトナナ(ななや)さん\n\nサードパーティですが、光学倍率サイトが販売されていました\nhttps://yukiyukivirtual.booth.pm/items/1144206\n\nフラッシュライトも他の方によって販売されています\nhttps://booth.pm/ja/items/1153579 \n","url":"https://booth.pm/ja/items/1139776","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1139776/3e1af68c-d760-4ed2-91f8-fa1077b74f0f_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yBL0Ezc9Ify5G2+7Qic1rFT4Woz9yFoo3RfYIV+1h+c="></script>
+    nonce="fhFAkB7NEu+eqycM5Fy0kbIWgPe164XwnKAMHaK81Wg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -820,9 +820,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
