--- a/VRChat/94/1122494.html
+++ b/VRChat/94/1122494.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "pLG5Fi4KRHLQsL0tlsT/iukhWmnUnmf6lZ24x40LRlM="></script>
+    "KG9ljvL5Zx/8hWwZTKcPXFq14AIsTOkxjEpsJcjK3+8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【FREE/無料】クリスマス衣装【VRoid Texture】","description":"VRoidStudioは最新版をお使いください。\nPlease use the latest version of VRoidStudio.\n\n無料版・支援用とも中身は同じです。\nThe contents are the same for both free and support.\n\nvroidcustomitemのインポート・エクスポートの使い方\n日本語：https://vroid.pixiv.help/hc/ja/articles/7467455312409\n\nHow to import and export custom items.\nEnglish：https://vroid.pixiv.help/hc/en-us/articles/7467455312409","url":"https://booth.pm/ja/items/1122494","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/70a52f05-5284-4b89-97ca-21c99c18b862/i/1122494/5d32b670-c9f8-444b-8f88-4d3d2722337b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pLG5Fi4KRHLQsL0tlsT/iukhWmnUnmf6lZ24x40LRlM="></script>
+    nonce="KG9ljvL5Zx/8hWwZTKcPXFq14AIsTOkxjEpsJcjK3+8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -565,9 +565,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
