--- a/VRChat/74/1139774.html
+++ b/VRChat/74/1139774.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9hX4NpxXsyuAPJsTiBgBQ/UsQ8m+HQPSHonq6pHdnWg="></script>
+    "EN581DmEuT2/pVZ0SxxHH3QFRad+aKPLGGMofs+ygFU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　耳かき","description":"ASMRでも(個人的に)大好きな耳かきを制作しました！\n\nお相手様を癒してあげたい方、膝枕して耳かきをしてあげましょう！\n\n先端部分に、AudioSoucerを入れてよりリラックスさせるのもいいですね！\n\n\n\n\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・過度なエロ、グロ系への使用は禁止です。\n・政治的利用、宗教的利用、誹謗中傷目的の作品への使用は禁止です。\n・改変等はオッケーです！\n・作者を偽ること、素モデルのままの再配布は禁止です。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:をたぱち\nhttps://twitter.com/_wtpc ご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2018.12.16　販売開始\n","url":"https://booth.pm/ja/items/1139774","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a1e47a5c-c994-4f91-9f96-57dc100ca505/i/1139774/5b3978c0-a716-4a1a-8329-074c423b24bf_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9hX4NpxXsyuAPJsTiBgBQ/UsQ8m+HQPSHonq6pHdnWg="></script>
+    nonce="EN581DmEuT2/pVZ0SxxHH3QFRad+aKPLGGMofs+ygFU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -368,9 +368,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
